--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redes Sociais</title>
 </head>
+
 <body>
-    <header>    
-       <h1>Relatório das Redes Sociais</h1> 
-       <nav>
-        <a href="index.html">Mundo</a>
-        <a href="#"></a>
-       </nav>
+    <header>
+        <h1>Relatório das Redes Sociais</h1>
+        <nav>
+            <a href="index.html">Mundo</a>
+            <a href="#">Minha Escola</a>
+        </nav>
+        <main class="graficos-section"></main>
+        <section id="graficos-container" class="graficos-container">
+            <!-- crie os gráficos aqui -->
+        </section>
+        </main>
+        <footer>
+            <p>Desenvolvido por Hillian Gabriel</p>
+        </footer>
     </header>
 </body>
+
 </html>
