--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br"> <!-- Traduz a pagina automatica para Portugues-->
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redes Sociais</title>
+    <title>Redes Sociais</title> <!-- Defini o Titulo-->
 </head>
 
-<body>
-    <header>
-        <h1>Relatório das Redes Sociais</h1>
+<body>  <!-- Corpo do Código-->
+    <header> <!--Cabeçalho-->
+        <h1>Relatório das Redes Sociais</h1> <!-- Defini um Titulo, pode ser usado até H3-->
         <nav>
-            <a href="index.html">Mundo</a>
+            <a href="index.html">Mundo</a> <!--Inseri Limks-->
             <a href="#">Minha Escola</a>
-        </nav>
+        </nav> <!-- Cria um Menu-->
         <main class="graficos-section"></main>
         <section id="graficos-container" class="graficos-container">
             <!-- crie os gráficos aqui -->
         </section>
         </main>
         <footer>
-            <p>Desenvolvido por Hillian Gabriel</p>
+            <p>Desenvolvido por Hillian Gabriel</p> <!--Cria um Paragráfo-->
         </footer>
     </header>
 </body>
