--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <footer>
             <p>Desenvolvido por Hillian Gabriel</p> <!--Cria um Paragráfo-->
         </footer>
+        <script type="module" src="graficos/informacoesGlobais.js"></script
+        <script type="module" src="graficos/quantidadeUsuarios.js"</script>
+        <script type="module" src="graficos/common.js"></script>
+
     </header>
 </body>
 
