--- a/index.html
+++ b/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-br"> <!-- Traduz a pagina automatica para Portugues-->
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redes Sociais</title> <!-- Defini o Titulo-->
+    <title>Redes Sociais</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
 </head>
-
-<body>  <!-- Corpo do Código-->
-    <header> <!--Cabeçalho-->
-        <h1>Relatório das Redes Sociais</h1> <!-- Defini um Titulo, pode ser usado até H3-->
+<body>
+    <header>
+        <h1>Relatório das redes sociais</h1>
         <nav>
-            <a href="index.html">Mundo</a> <!--Inseri Limks-->
-            <a href="#">Minha Escola</a>
-        </nav> <!-- Cria um Menu-->
-        <main class="graficos-section"></main>
-        <section id="graficos-container" class="graficos-container">
-            <!-- crie os gráficos aqui -->
-        </section>
-        </main>
-        <footer>
-            <p>Desenvolvido por Hillian Gabriel</p> <!--Cria um Paragráfo-->
-        </footer>
-        <script type="module" src="graficos/informacoesGlobais.js"></script
-        <script type="module" src="graficos/quantidadeUsuarios.js"</script>
-        <script type="module" src="graficos/common.js"></script>
-
+            <a href="index.html">Mundo</a>
+            <a href="#">Minha escola</a>
+        </nav>
     </header>
+    <main class="graficos-section">
+        <section id="graficos-container" class="graficos-container">
+            <!-- crie os gráficos/texto aqui -->
+        </section>
+    </main>
+    <footer>
+        <p>Desenvolvido por Hillian</p>
+    </footer>
+    <script type="module" src="graficos/common.js"></script>
+    <script type="module" src="graficos/informacoesGlobais.js"></script>
+    <script type="module" src="graficos/quantidadeUsuarios.js"></script>
 </body>
-
 </html>
